feat(crossplane): add basic networking resources

--- a/crossplane/Makefile
+++ b/crossplane/Makefile
@@ -6,6 +6,12 @@ crossplane-install: | _crossplane-repo-install
 	@helm upgrade --install crossplane --namespace crossplane-system --create-namespace --wait --timeout 300s crossplane-stable/crossplane -f $(CROSSPLANE_WORKING_DIR)/helm-values.yaml
 	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/aws-provider-config.yaml"
 
+## crossplane-deploy-network: Deploy basic networking reqources
+.PHONY: crossplane-deploy-network
+crossplane-deploy-network:
+	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/stacks/networking/vpc.yaml"
+	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/stacks/networking/public-subnet.yaml"
+
 # Internal targets
 # ----------------
 
