feat(make): add target to initialize requirements

--- a/crossplane/Makefile
+++ b/crossplane/Makefile
@@ -1,8 +1,13 @@
 CROSSPLANE_WORKING_DIR := $(REPO_DIR)/crossplane
 
+## crossplane-init: Install the crossplane CLI
+.PHONY: crossplane-init
+crossplane-init: | _crossplane-repo-install
+	@curl -sL https://raw.githubusercontent.com/crossplane/crossplane/master/install.sh | sh
+
 ## crossplane-install: Install crossplane in the k8s cluster
 .PHONY: crossplane-install
-crossplane-install: | _crossplane-repo-install
+crossplane-install:
 	@helm upgrade --install crossplane --namespace crossplane-system --create-namespace --wait --timeout 300s crossplane-stable/crossplane -f $(CROSSPLANE_WORKING_DIR)/helm-values.yaml
 	@kubectl apply -f "$(CROSSPLANE_WORKING_DIR)/aws-provider-config.yaml"
 
